# hw_python_web_thirteen_dj

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
hw_app/: manage.py
hw_app/hw_app/: asgi.py  config.json  settings.py  urls.py  wsgi.py
hw_app/hw_ten_app/: admin.py  apps.py  forms.py  models.py  seed.py  urls.py  views.py
hw_app/hw_ten_app/migrations/: 0001_initial.py  0002_alter_quote_author_alter_quote_tags.py
hw_app/hw_ten_app/static/hw_ten_app/: authors.json
hw_app/hw_ten_app/templates/hw_ten_app/: author.html  authors.html  base.html  detail.html  index.html  quote.html  tag.html
hw_app/users/: forms.py  urls.py  views.py
hw_app/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
